Fixes red color not showing up in snippetPreview

--- a/css/snippet-307.css
+++ b/css/snippet-307.css
@@ -16,3 +16,7 @@
 .wp-core-ui .button.snippet-editor__submit {
 	margin-top: 1em;
 }
+
+input[type="text"].snippet-editor__field--invalid {
+	color: #f00;
+}
